# mlops-integrations

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lambda/: app.py
lambda/.chalice/: config.json
source/: test.py  training.py
source/code/: mnist.py
