[tool.poetry]
name = "mlops-integrations"
version = "0.1.0"
description = ""
authors = ["Ernane Sena <ernane.sena@gmail.com>"]
readme = "README.md"
packages = [{include = "source"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
pre-commit = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
