[tool.poetry]
name = "mlops-integrations"
version = "0.1.0"
description = ""
authors = ["Ernane Sena <ernane.sena@gmail.com>"]
readme = "README.md"
packages = [{include = "source"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
pre-commit = "^3.0.1"
boto3 = "1.14.12"
numpy = "1.19.2"
opencv-python = "4.4.0.42"
pillow = "7.2.0"
sagemaker = "2.5.3"
torch-vision = "0.1.6.dev0"
torch = "1.4.0"
wget = "3.2"
chalice = "1.27.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
